--- a/src/pages/dating/dating.scss
+++ b/src/pages/dating/dating.scss
@@ -24,4 +24,7 @@ page-dating {
     .list-ios > .item-block:last-child, .list-ios > .item-wrapper:last-child .item-block{
         border-bottom: none;
     }
+    ion-label{
+        color: #fff;
+    }
 }
